<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.yoloyomun.homeFragment"
        android:label="@string/nav_home" />

    <fragment
        android:id="@+id/uploadFragment"
        android:name="com.example.yoloyomun.uploadFragment"
        android:label="@string/nav_upload" />

    <fragment
        android:id="@+id/analysisFragment"
        android:name="com.example.yoloyomun.analysisFragment"
        android:label="@string/nav_analysis" />

    <fragment
        android:id="@+id/archiveFragment"
        android:name="com.example.yoloyomun.archiveFragment"
        android:label="@string/nav_archive" />

</navigation>
